tests/neg/since/since_t3.0.scala
import scala.quoted.*

def useQuotes(using Quotes) =
  import quotes.reflect.*
  def useFieldMember(s: Symbol) = s.fieldMember("abc") // error
  useFieldMember